src/css/sf.css
/* ... */
.login-btn:hover {
	color: #fff;
	border: 1px solid #000;
	-webkit-box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
	-moz-box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
	box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
}

/* Tables */
table {
	width: auto;
	text-align: left;
	border-collapse: collapse;
}

table th, table td {
	border: 1px solid #c9c9cb;
	vertical-align: middle;
	padding: 0.5em 0.75em;
}

table th, table tr th {
	background-color: #404040;
	color: #f4f4f6;
	/*font-size: 0.9em;*/
}
/*
table td {
	font-size: 0.85em;
}
*/
table tbody tr.altrow {
	background-color: #f9f9fa;
}

table tbody tr:hover, table tbody tr.altrow:hover {
	background-color: #e1f8ff;
}

/* Tabs */
.tab {
	position: relative;
	width: 158px;
	margin-right: 2px;
	float: left;
	font-size: 0.9em;
	text-align: center;
	-webkit-border-radius: 3px 3px 0 0;
	-moz-border-radius: 3px 3px 0 0;
	border-radius: 3px 3px 0 0;
}

.tab-off {
	height: 29px;
	line-height: 29px;
	text-shadow: #fff 0 1px 2px;
	cursor: pointer;
	border: 1px solid #c4c4c5;
	background: #fdfdff;
	background: -moz-linear-gradient(top, #fdfdff 0%, #e1e1e3 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdff), color-stop(100%,#e1e1e3));
	background: -webkit-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -o-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -ms-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: linear-gradient(to bottom, #fdfdff 0%,#e1e1e3 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdff', endColorstr='#e1e1e3',GradientType=0 );
}

.tab-off:hover {
	background: #fdfdff;
	border: 1px solid #a4a4a5;
}

.tab-on {
	height: 35px;
	line-height: 35px;
	margin-top: -6px;
	color: #fff;
	border: 1px solid #0481aa;
	background: #1bc5fc;
	background: -moz-linear-gradient(top,  #1bc5fc 0%, #049dcf 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1bc5fc), color-stop(100%,#049dcf));
	background: -webkit-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -o-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -ms-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: linear-gradient(to bottom,  #1bc5fc 0%,#049dcf 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bc5fc', endColorstr='#049dcf',GradientType=0 );
}

/* Notifications */
.alert {
	margin-top: 8px;
	margin-bottom: 4px;
	padding: 7px 10px 7px 35px;
}

.alert .close {
	top: 0px;
	right: 0px;
}

.notification {
	position: relative;
	margin: 0 0 10px;
	padding: 7px 10px 7px 35px;
	line-height: 15px;
	font-size: 0.9em;
}

.alert-error {
	background: url(../images/exclamation.png) no-repeat scroll 8px 8px #ffeeee;
	border: 1px solid #e47b7b;
}

.alert-warn {
	background: url(../images/error.png) no-repeat scroll 8px 8px #FFFDF1;
	border: 1px solid #FFE578;
}

.alert-success {
	background: url(../images/tick.png) no-repeat scroll 8px 8px #f4fff2;
	border: 1px solid #81ca76;
}

.alert-info {
	background: url(../images/information.png) no-repeat scroll 8px 8px #F4FAFF;
	border: 1px solid #AECEEF;
}

/* Container Windows */
div.application {
	width: auto;
	height: auto;
	border: 1px solid #c4c4c5;
	-webkit-border-radius: 5px 5px 5px 5px;
	-moz-border-radius: 5px 5px 5px 5px;
	border-radius: 5px 5px 5px 5px; 
}

div.applicationTitle {
	width: auto;
	height: 16px;
	padding: .5em .7em .3em .7em;
	font-size: 0.9em;
	text-shadow: #fff 0 1px 2px;
	border-bottom: 1px solid #c4c4c5;
	-webkit-border-radius: 5px 5px 0 0;
	-moz-border-radius: 5px 5px 0 0;
	border-radius: 5px 5px 0 0;
	background: #fdfdff;
	background: -moz-linear-gradient(top, #fdfdff 0%, #e1e1e3 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdff), color-stop(100%,#e1e1e3));
	background: -webkit-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -o-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -ms-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: linear-gradient(to bottom, #fdfdff 0%,#e1e1e3 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdff', endColorstr='#e1e1e3',GradientType=0 );
}

p.applicationContent {
	padding: .7em;
}

.banner {
	padding: 30px 0 30px 0;
}

/* icons */
button i, a i {
	margin-right: 8px;
}

i.icon-remove {
	color: #f66
}

/* Top navigation */
div.hdrnav {
	overflow: auto;
	margin-left: 122px;
	padding-top: 20px;
}

/*
div.hdrnav ul {
}
*/
div.hdrnav img {
	margin-right: 12px;
}

ul.topNav > li {
	background: #777777;
	display: inline-block;
	margin-top: 2px;
	margin-right: 7px;
}

ul.topNav li:hover, div.hdrnav li.here {
	background: #0088cc;
}

ul.topNav a {
	color: #fff;
	display: block;
	padding: 6px 12px 6px 12px;
	text-decoration: none;
}

div#logo-small {
	width: 27px;
	height: 36px;
	background: url(../images/sf_logo_small.png) no-repeat;
}

/* Breadcrumbs */
.breadcrumb > li .divider {
	padding: 0 5px;
	xcolor: #ccc;
}

ul.topCrumbs {
	margin: 5px 0 0 0;
	font-weight:bold;
	color: gray;
	padding: 0 0;
	list-style: none;
	background-color: #fff;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
}

ul.topCrumbs a {
	color: gray;
}

ul.topCrumbs .active {
	color: #202020;
}

/* jqte fixes and overrides */
.jqte_placeholder {
	display: block; 
}

.jqte {
	margin: 20px 0;
}

.jqte_toolbar {
	visibility: hidden;
	height: 0px;
}

/* Question Page */
table#answers tbody tr:hover, table tbody tr.altrow:hover {
	background-color: #fff;
}

div#text {
	overflow: auto;
	min-height: 400px;
	max-height: 600px;
}

div#text p, div.scripture-quote p {
	line-height: 1.2em;
}

div#text p.q1, div.scripture-quote p.q1 {
	margin-bottom: 0em;
}

div#text p.q2, div.scripture-quote p.q2 {
	margin-bottom: 0em;
	margin-left: 1.5em;
}

div#answerControls {
	position: relative;
}

.overlay {
	position: absolute;
	z-index: 9999;
}

div#answerControls .overlay {
	top: 20px;
}

div.overlay form {
	margin-bottom: 0px;
}
/* ... */

